--- a/Classification/traffic_pattern_similarity.ipynb
+++ b/Classification/traffic_pattern_similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kenya-SouthAfrica\n",
-      "Similarity Score: 91\n",
+      "Intellectualism\n",
+      "Australia-USA\n",
+      "Similarity Score: 88\n",
       "Total Comparisons: 158\n",
-      "Similarity Percentage: 57.59%\n"
+      "Similarity Percentage: 55.70%\n"
      ]
     }
    ],
@@ -79,19 +80,24 @@
     "# file2 = './output/regions/europe/genral_labeled_data_with_relative_traffic_rates/Technology and Science/Finland_with_relative_traffic_rates.csv'\n",
     "# file2 = './output/regions/europe/genral_labeled_data_with_relative_traffic_rates/Technology and Science/UK_with_relative_traffic_rates.csv'\n",
     "\n",
-    "#1 0\n",
-    "#1 2\n",
-    "#0 2\n",
-    "africa = countries['africa']\n",
+    "#1 1 0\n",
+    "#0 2 2\n",
+    "north_america_australia = countries['north_america_australia']\n",
+    "north_america_australia = countries['north_america_australia']\n",
+    "\n",
     "topic = clusters[6]\n",
     "\n",
-    "country1 = africa[0]\n",
-    "country2 = africa[2]\n",
+    "# country1 = north_america_australia[1]\n",
+    "# country2 = north_america_australia[0]\n",
     "\n",
-    "# file1 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Technology and Science/{country1}_with_relative_traffic_rates.csv'\n",
-    "# file2 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Technology and Science/{country2}_with_relative_traffic_rates.csv'\n",
-    "file1 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{topic}/{country1}_with_relative_traffic_rates.csv'\n",
-    "file2 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{topic}/{country2}_with_relative_traffic_rates.csv'\n",
+    "# country1 = north_america_australia[1]\n",
+    "# country2 = north_america_australia[2]\n",
+    "\n",
+    "country1 = north_america_australia[0]\n",
+    "country2 = north_america_australia[2]\n",
+    "\n",
+    "file1 = f'./output/regions/north_america_australia/genral_labeled_data_with_relative_traffic_rates/{topic}/{country1}_with_relative_traffic_rates.csv'\n",
+    "file2 = f'./output/regions/north_america_australia/genral_labeled_data_with_relative_traffic_rates/{topic}/{country2}_with_relative_traffic_rates.csv'\n",
     "\n",
     "\n",
     "\n",
@@ -102,6 +108,7 @@
     "    if total_comparisons == 0: #check if files are empty\n",
     "        print(\"Error: one or both files are empty or have only the header\")\n",
     "    else:\n",
+    "        print(topic)\n",
     "        print(f'{country1}-{country2}')\n",
     "        print(f\"Similarity Score: {similarity_score}\")\n",
     "        print(f\"Total Comparisons: {total_comparisons}\")\n",
