--- a/Classification/similarity_data_vis.ipynb
+++ b/Classification/similarity_data_vis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- AFRICA ---\n",
+      "\n",
+      "**Economy**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   99.37        98.1\n",
+      "Nigeria      99.37       -       97.47\n",
+      "SouthAfrica   98.1   97.47           -\n",
+      "\n",
+      "**Technology and Science**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   80.38       81.01\n",
+      "Nigeria      80.38       -       79.75\n",
+      "SouthAfrica  81.01   79.75           -\n",
+      "\n",
+      "**Entertainment**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   60.13       60.76\n",
+      "Nigeria      60.13       -       59.49\n",
+      "SouthAfrica  60.76   59.49           -\n",
+      "\n",
+      "**Lifestyle**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   70.89       58.23\n",
+      "Nigeria      70.89       -       57.59\n",
+      "SouthAfrica  58.23   57.59           -\n",
+      "\n",
+      "**Accident**\n",
+      "            Kenya Nigeria SouthAfrica\n",
+      "Kenya           -    55.7        48.1\n",
+      "Nigeria      55.7       -       49.37\n",
+      "SouthAfrica  48.1   49.37           -\n",
+      "\n",
+      "**Geopolitical**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   72.78       63.92\n",
+      "Nigeria      72.78       -       62.03\n",
+      "SouthAfrica  63.92   62.03           -\n",
+      "\n",
+      "**Intellectualism**\n",
+      "             Kenya Nigeria SouthAfrica\n",
+      "Kenya            -   65.82       57.59\n",
+      "Nigeria      65.82       -       57.59\n",
+      "SouthAfrica  57.59   57.59           -\n",
+      "\n",
+      "--- EUROPE ---\n",
+      "\n",
+      "**Economy**\n",
+      "        Denmark     UK Finland\n",
+      "Denmark       -  92.41   88.61\n",
+      "UK        92.41      -   93.67\n",
+      "Finland   88.61  93.67       -\n",
+      "\n",
+      "**Technology and Science**\n",
+      "        Denmark     UK Finland\n",
+      "Denmark       -   53.8   56.96\n",
+      "UK         53.8      -   50.63\n",
+      "Finland   56.96  50.63       -\n",
+      "\n",
+      "**Entertainment**\n",
+      "        Denmark     UK Finland\n",
+      "Denmark       -  77.85   86.71\n",
+      "UK        77.85      -   73.42\n",
+      "Finland   86.71  73.42       -\n",
+      "\n",
+      "**Lifestyle**\n",
+      "        Denmark    UK Finland\n",
+      "Denmark       -  50.0    48.1\n",
+      "UK         50.0     -    46.2\n",
+      "Finland    48.1  46.2       -\n",
+      "\n",
+      "**Accident**\n",
+      "        Denmark     UK Finland\n",
+      "Denmark       -   51.9   49.37\n",
+      "UK         51.9      -   60.76\n",
+      "Finland   49.37  60.76       -\n",
+      "\n",
+      "**Geopolitical**\n",
+      "        Denmark     UK Finland\n",
+      "Denmark       -  48.73   44.94\n",
+      "UK        48.73      -   43.67\n",
+      "Finland   44.94  43.67       -\n",
+      "\n",
+      "**Intellectualism**\n",
+      "        Denmark    UK Finland\n",
+      "Denmark       -  50.0    44.3\n",
+      "UK         50.0     -    46.2\n",
+      "Finland    44.3  46.2       -\n",
+      "\n",
+      "--- NORTH_AMERICA_AUSTRALIA ---\n",
+      "\n",
+      "**Economy**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  94.94  96.84\n",
+      "Canada        94.94      -  95.57\n",
+      "USA           96.84  95.57      -\n",
+      "\n",
+      "**Technology and Science**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  50.63   55.7\n",
+      "Canada        50.63      -  59.49\n",
+      "USA            55.7  59.49      -\n",
+      "\n",
+      "**Entertainment**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  91.14  85.44\n",
+      "Canada        91.14      -  91.77\n",
+      "USA           85.44  91.77      -\n",
+      "\n",
+      "**Lifestyle**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  68.35  72.15\n",
+      "Canada        68.35      -  65.19\n",
+      "USA           72.15  65.19      -\n",
+      "\n",
+      "**Accident**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  74.05  79.75\n",
+      "Canada        74.05      -  74.68\n",
+      "USA           79.75  74.68      -\n",
+      "\n",
+      "**Geopolitical**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  46.84  47.47\n",
+      "Canada        46.84      -  62.03\n",
+      "USA           47.47  62.03      -\n",
+      "\n",
+      "**Intellectualism**\n",
+      "          Australia Canada    USA\n",
+      "Australia         -  58.23  70.25\n",
+      "Canada        58.23      -   55.7\n",
+      "USA           70.25   55.7      -\n",
+      "\n",
+      "--- WEST_ASIA ---\n",
+      "\n",
+      "**Economy**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       95.57     93.67\n",
+      "Philippines    95.57           -      94.3\n",
+      "Singapore      93.67        94.3         -\n",
+      "\n",
+      "**Technology and Science**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       67.72     60.76\n",
+      "Philippines    67.72           -     63.29\n",
+      "Singapore      60.76       63.29         -\n",
+      "\n",
+      "**Entertainment**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       78.48     81.65\n",
+      "Philippines    78.48           -     91.77\n",
+      "Singapore      81.65       91.77         -\n",
+      "\n",
+      "**Lifestyle**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       62.66     52.53\n",
+      "Philippines    62.66           -      44.3\n",
+      "Singapore      52.53        44.3         -\n",
+      "\n",
+      "**Accident**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       52.53     49.37\n",
+      "Philippines    52.53           -     47.47\n",
+      "Singapore      49.37       47.47         -\n",
+      "\n",
+      "**Geopolitical**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       76.58     55.06\n",
+      "Philippines    76.58           -     50.63\n",
+      "Singapore      55.06       50.63         -\n",
+      "\n",
+      "**Intellectualism**\n",
+      "            Malaysia Philippines Singapore\n",
+      "Malaysia           -       58.86     66.46\n",
+      "Philippines    58.86           -     55.06\n",
+      "Singapore      66.46       55.06         -\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -48,165 +231,6 @@
     "            print(df.to_string()) # to_string() prevents truncation\n",
     "\n",
     "visualize_similarity_pandas(similarity_data, countries, clusters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- AFRICA ---\n",
-      "\n",
-      "**Economy**\n",
-      " Overall Mean\n",
-      "    98.313333\n",
-      "\n",
-      "**Technology and Science**\n",
-      " Overall Mean\n",
-      "        80.38\n",
-      "\n",
-      "**Entertainment**\n",
-      " Overall Mean\n",
-      "    60.126667\n",
-      "\n",
-      "**Lifestyle**\n",
-      " Overall Mean\n",
-      "    62.236667\n",
-      "\n",
-      "**Accident**\n",
-      " Overall Mean\n",
-      "    51.056667\n",
-      "\n",
-      "**Geopolitical**\n",
-      " Overall Mean\n",
-      "    66.243333\n",
-      "\n",
-      "**Intellectualism**\n",
-      " Overall Mean\n",
-      "    60.333333\n",
-      "\n",
-      "--- EUROPE ---\n",
-      "\n",
-      "**Economy**\n",
-      " Overall Mean\n",
-      "    91.563333\n",
-      "\n",
-      "**Technology and Science**\n",
-      " Overall Mean\n",
-      "    53.796667\n",
-      "\n",
-      "**Entertainment**\n",
-      " Overall Mean\n",
-      "    79.326667\n",
-      "\n",
-      "**Lifestyle**\n",
-      " Overall Mean\n",
-      "         48.1\n",
-      "\n",
-      "**Accident**\n",
-      " Overall Mean\n",
-      "        54.01\n",
-      "\n",
-      "**Geopolitical**\n",
-      " Overall Mean\n",
-      "        45.78\n",
-      "\n",
-      "**Intellectualism**\n",
-      " Overall Mean\n",
-      "    46.833333\n",
-      "\n",
-      "--- NORTH_AMERICA_AUSTRALIA ---\n",
-      "\n",
-      "**Economy**\n",
-      " Overall Mean\n",
-      "    95.783333\n",
-      "\n",
-      "**Technology and Science**\n",
-      " Overall Mean\n",
-      "    55.273333\n",
-      "\n",
-      "**Entertainment**\n",
-      " Overall Mean\n",
-      "        89.45\n",
-      "\n",
-      "**Lifestyle**\n",
-      " Overall Mean\n",
-      "    68.563333\n",
-      "\n",
-      "**Accident**\n",
-      " Overall Mean\n",
-      "        76.16\n",
-      "\n",
-      "**Geopolitical**\n",
-      " Overall Mean\n",
-      "    52.113333\n",
-      "\n",
-      "**Intellectualism**\n",
-      " Overall Mean\n",
-      "    61.393333\n",
-      "\n",
-      "--- WEST_ASIA ---\n",
-      "\n",
-      "**Economy**\n",
-      " Overall Mean\n",
-      "    94.513333\n",
-      "\n",
-      "**Technology and Science**\n",
-      " Overall Mean\n",
-      "    63.923333\n",
-      "\n",
-      "**Entertainment**\n",
-      " Overall Mean\n",
-      "    83.966667\n",
-      "\n",
-      "**Lifestyle**\n",
-      " Overall Mean\n",
-      "    53.163333\n",
-      "\n",
-      "**Accident**\n",
-      " Overall Mean\n",
-      "        49.79\n",
-      "\n",
-      "**Geopolitical**\n",
-      " Overall Mean\n",
-      "    60.756667\n",
-      "\n",
-      "**Intellectualism**\n",
-      " Overall Mean\n",
-      "    60.126667\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def visualize_similarity_pandas_with_overall_mean(similarity_data, countries, clusters):\n",
-    "    for region, country_list in countries.items():\n",
-    "        print(f\"\\n--- {region.upper()} ---\")\n",
-    "        for category in clusters:\n",
-    "            print(f\"\\n**{category}**\")\n",
-    "            if region not in similarity_data or category not in similarity_data[region]:\n",
-    "                print(\"Data not available for this region and category.\")\n",
-    "                continue\n",
-    "\n",
-    "            table_data = similarity_data[region][category]\n",
-    "\n",
-    "            # Calculate the overall mean\n",
-    "            values = list(table_data.values())\n",
-    "            overall_mean = np.mean(values) if values else np.nan  # Handle empty lists\n",
-    "\n",
-    "            # Create a DataFrame (now with only one row for the mean)\n",
-    "            df = pd.DataFrame({'Overall Mean': [overall_mean]})\n",
-    "\n",
-    "            # Display the DataFrame\n",
-    "            print(df.to_string(index=False)) #index=False to prevent printing index\n",
-    "\n",
-    "\n",
-    "visualize_similarity_pandas_with_overall_mean(similarity_data, countries, clusters)"
    ]
   }
  ],
