--- a/Classification/new_traffic_similiarity_calculator.ipynb
+++ b/Classification/new_traffic_similiarity_calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,30 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Category: Accident\n",
-      "copmared: Kenya-SouthAfrica\n",
-      "Traffic Rate Similarity: 22.94%\n"
+      "Category: Intellectualism\n",
+      "copmared: Philippines-Singapore\n",
+      "Traffic Rate Similarity: 49.23%\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "#1 1 0\n",
-    "#0 2 2\n",
-    "\n",
-    "africa = countries['africa']\n",
-    "country1 = africa[0]\n",
+    "#0 0 1\n",
+    "#1 2 2 \n",
+    "topic = clusters[6]\n",
+    "region = 'west_asia'\n",
+    "africa = countries[region]\n",
+    "country1 = africa[1]\n",
     "country2 = africa[2]\n",
     "\n",
-    "file1 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Accident/{country1}_with_relative_traffic_rates.csv'  # استبدل هذا بمسار الملف الأول\n",
-    "file2 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Accident/{country2}_with_relative_traffic_rates.csv'  # استبدل هذا بمسار الملف الثاني\n",
+    "file1 = f'./output/regions/{region}/genral_labeled_data_with_relative_traffic_rates/{topic}/{country1}_with_relative_traffic_rates.csv'   \n",
+    "file2 = f'./output/regions/{region}/genral_labeled_data_with_relative_traffic_rates/{topic}/{country2}_with_relative_traffic_rates.csv'  \n",
     "\n",
     "df1 = pd.read_csv(file1)\n",
     "df2 = pd.read_csv(file2)\n",
